# cbank-api

./: .gitignore  README.md  alembic.ini  app.py  dep.txt  pyproject.toml  test.db  test.sqlalchemy
migrations/: env.py
migrations/versions/: 2f76ba9fa308_create_users_table.py  7b82bf0280ab_create_table_history.py  e41382197197_create_table_balance.py  eeb7794cb1b4_alter_table_user.py
src/: app.py
src/database/: models.py
src/middleware/: token_auth.py
src/routes/: routes.py
src/routes/session/: session_route.py
src/routes/transfer/: trasnfer_route.py
src/routes/user/: balance_routes.py  user_route.py
src/socket/: websocket.py
src/utils/: database_func.py  send_mail.py
templates/: email_template.html  index.html
