[tool.poetry]
name = "cbank-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.13.4"
starlette = "^0.14.2"
wsproto = "^1.0.0"
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
databases = "^0.4.3"
alembic = "^1.5.8"
aiosqlite = "0.16.0"
SQLAlchemy = "1.3.24"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
blowfish = "^0.6.1"
twofish = "^0.3.0"
starlette-jwt = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
